--- a/session-8/project-2/1.html
+++ b/session-8/project-2/1.html
@@ -44,6 +44,8 @@
             nulla!
           </p>
           <button>Add</button>
+          <!-- new arraival logo -->
+          <img class='new-logo' src="https://as2.ftcdn.net/v2/jpg/00/56/78/19/1000_F_56781915_VBgioi6yzW15xFkONlmQWbwYxZvlz7FL.jpg" alt="">
         </div>
         <!-- item-2 -->
         <div class="item">
@@ -99,6 +101,9 @@
           <button>Add</button>
         </div>
       </section>
+
+    <!-- whatapp logo -->
+    <img class="wt-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/2062095_application_chat_communication_logo_whatsapp_icon.svg/2048px-2062095_application_chat_communication_logo_whatsapp_icon.svg.png" alt="">
     </main>
     <!-- footer -->
     <footer>
@@ -112,5 +117,7 @@
             <p>9999999</p>
         </div>
     </footer>
+
+
   </body>
 </html>
