--- a/session-9/project-3/1.html
+++ b/session-9/project-3/1.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="layout">
+        <div class="header">Header</div>
+        <div class="sidebar">Sidebar</div>
+        <div class="content-1">Content-1</div>
+        <div class="content-2">Content-2</div>
+        <div class="content-3">Content-3</div>
+        <div class="footer">Footer</div>
+
+    </div>
 </body>
 </html>
